im out here on the roll

--- a/groupdeliverable4.html
+++ b/groupdeliverable4.html
@@ -55,6 +55,12 @@
             <li>Forms for adding/removing activities.</li>
           </ul>
         </p>
+        <p class="desc">
+          The design choice for a date slider was made since the calendar feature would be similar to a class schedule app. These apps, and apps which you can use to plan your days usually have a date slider on top of their pages, which made it applicable for this app as well.
+        </p>
+        <p class="desc">
+          A lot of webpages use a month calendar overview for picking dates (which is something that is also implementend in the app, just as a seperate pop-up and not directly accessible). However, this is a mobile app, and this interface would benefit from an accessible slider from which dates can be picked. When you want to expose a variety of options or help users limit a number of options quickly, a slider serves the purpose really well (Designing the perfect slider UX — Smashing magazine, 2017).
+        </p>
         <p class="desc">I have used several sources of inspiration for these features, which have been put into moodboards:</p>
         <div class="company">
           <img class="deliverable" src="./images/inspo1.png">
@@ -110,10 +116,19 @@
     </div>
     <div class="reveal">
       <div class="width">
+        <h2 class="guide">FINAL PROTOTYPE</h2>
         <p class="desc">After everything was linked together, a final prototype was ready for testing. After several iterations, this is the final prototype of the app which you can navigate through below:</p>
         <div class="wireframe">
           <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoIqNVG2cKIFS9ToZsToQVz%2FTeam-Snorkelkat-Design-File%3Fpage-id%3D2%253A16%26type%3Ddesign%26node-id%3D1548-10369%26viewport%3D-614%252C-12487%252C0.73%26t%3DDWe2IX7abRpuztJG-1%26scaling%3Dscale-down%26starting-point-node-id%3D1548%253A10369%26mode%3Ddesign" allowfullscreen></iframe>
         </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">REFERENCES</h2>
+        <p class="desc">Designing the perfect slider UX — Smashing magazine. (2017, 19 juli). Smashing Magazine. https://www.smashingmagazine.com/2017/07/designing-perfect-slider/</p>
+        <hr class="vesion">
       </div>
     </div>
   </main>
