--- a/individualdeliverable7.html
+++ b/individualdeliverable7.html
@@ -35,12 +35,53 @@
     <div class="width">
         <h2 class="guide">INTRO</h2>
         <p class="desc">
-          I used Figma for my entired designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          For the development of my portfolio, I used vanilla HTML, CSS and JavaScript. After my front-end framework research, I had concluded that this would be the best way to work on the development of this portfolio.
         </p>
+        <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">START: HOMEPAGE</h2>
+        <p class="desc">
+          For the homepage, I wanted to achieve a look that invites the user to find out more about the portfolio. This would entail the logo and proof button at the top of the screen, and inviting content in the middle of the screen. 
+        </p>
+        <p class="desc">I re-used a lot of code from my already existing portfolio from my <a class="menu-link line" href="https://tijnvdh.nl/Portfolio/opdracht.html" target="_blank" rel="noopener noreferrer">internship</a>. While a lot of functionalities act the same, I did try to apply a different type of style to this portfolio, while still keeping the dark theme.</p>
         <div class="company">
-          <img class="deliverable" src="./images/figma.png">
+          <img src="./images/homepage.png" class="deliverable">
         </div>
         <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">COMPETENCE TABLE</h2>
+        <p class="desc">Working on the competence table was easier than I had anticipated by using the HTML table tags. After experimenting with different rows and columns I got to the final result I was hoping for:</p>
+        <div class="company">
+          <img src="./images/competence.png" class="deliverable">
+        </div>
+        <div class="company">
+          <img src="./images/tablecode.png" class="deliverable">
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">PROOF SECTION</h2>
+        <p class="desc">
+          There is a proof section at the bottom of each project page. I had to make sure that The meaning of the deliverable, the attached learning outcome and an illustration for this was clear. By making use of a <a class="menu-link line" href="https://www.youtube.com/watch?v=ssEiM3zyN08" target="_blank" rel="noopener noreferrer">YouTube tutorial</a>,
+          I quickly got to the desired end-product. 
+        </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">REFERENCES</h2>
+        <p class="desc">
+          Tahmid Ahmed. (2023, 10 augustus). Build a complete personal portfolio website using HTML, CSS, and JavaScript [Video]. YouTube. https://www.youtube.com/watch?v=ssEiM3zyN08
+        </p>
+      </div>
     </div>
   </main>
   
