--- a/groupdeliverable5.html
+++ b/groupdeliverable5.html
@@ -33,11 +33,69 @@
       <p class="product-text">DELIVERABLE CONTAINING MY WORK IN PROOF OF CONCEPTS</p>
     </section>
     <div class="width">
-        <h2 class="guide">PERSONAS</h2>
+        <h2 class="guide">INTRO</h2>
         <p class="desc">
-          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          For the final stages of the group project, proof of concepts was something me and the group longed for. While the final deliverable our stakeholder Dennis wished for was a prototype, I thought it was a good idea to work on these proof of concepts together with some group members.
         </p>
         <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">REQUIREMENTS</h2>
+        <p class="desc">
+          When discussing with the group, a list of three proof of concepts came forward that we would work on.
+          <ul class="target-list">
+            <li>A live decibel meter with visualisation.</li>
+            <li>The daily dose screen filling up based on the decibel meter values from the first item.</li>
+          </ul>
+        </p>
+        <p class="desc">These proof of concepts would be used on the day of Innovation Insights, and displayed on big screens during the presentations.</p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">APPROACH</h2>
+        <p class="desc">By making use of the <a class="menu-link line" href="https://cmdmethods.nl/cards/workshop/proof-of-concept" target="_blank" rel="noopener noreferrer">proof of concept</a> method from the CMD Methods, me and a group member started working in HTML, CSS and JavaScript on the first proof of concept.</p>
+        <p class="desc">The approach was that I started working on the visualisation, while the other group members worked on the decibel meter. Eventually I would make a merge request to combine the work of us both.</p>
+        <p class="desc">By following a <a class="menu-link line" href="https://cmdmethods.nl/cards/workshop/proof-of-concept" target="_blank" rel="noopener noreferrer">YouTube tutorial</a>, I quickly got the hang of the Web Audio API. I ended up with a visualisation that could be merged with the live decibel meter. </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">END RESULT</h2>
+        <p class="desc">After having succesfully merged code in Gitlab, the proof of concept was ready to be used. The proof of concept can be accessed through <a class="menu-link line" href="https://tijnvdh.nl/GripOnSound/index.html" target="_blank" rel="noopener noreferrer">here</a>.</p>
+        <div class="company">
+          <img src="./images/poc.png" class="deliverable">
+        </div>
+        <p class="desc">I also did not know that getting mic input in JavaScript was actually quite simple. There is basically one file which updates the mic input, and draws the visualisation on the screen:</p>
+        <div class="company">
+          <img src="./images/poccode.png" class="deliverable">
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">CONCLUSION & NEXT STEPS</h2>
+        <p class="desc">The end result is not validated, because it will be used on Innovation Insights. This is after the deadline, which means that user feedback is not taken into account for this conclusion. However, I expect that the meter on the day of the presentation is not entirely accurate, because it still makes use of a laptop microphone. However, it still will give a clear idea on the concept, and that sound plays a prominent role in this.</p>
+        <p class="desc">A list of action points from this deliverable is as follows:
+          <ul class="target-list">
+            <li>Prepare the proof of concept for the Innovation Insights presentation.</li>
+          </ul>
+        </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">REFERENCES</h2>
+        <p class="desc">
+          Franks laboratory. (2021, 12 november). Animate voice & music with JavaScript [Video]. YouTube. https://www.youtube.com/watch?v=qNEb9of714U
+        </p>
+        <hr class="version">
+      </div>
     </div>
   </main>
   
