--- a/groupdeliverable7.html
+++ b/groupdeliverable7.html
@@ -30,14 +30,74 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">GROUP PROJECT</h2>
       <h1 class="product-heading">PROJECT PLAN</h1>
-      <p class="product-text">DELIVERABLE CONTAINING MY ROLE AS SCRUM MASTER</p>
+      <p class="product-text">DELIVERABLE CONTAINING THE INITIAL PROJECT PLAN AND RESEARCH QUESTIONS.</p>
     </section>
     <div class="width">
-        <h2 class="guide">PERSONAS</h2>
+      <hr class="version">
+      <h2 class="guide">INTRO</h2>
+        <p class="desc">This deliverable page presents a summary of the project plan of the group project. At the bottom of the page you can find a button which leads to the full project plan document.</p>
+      <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+          <h2 class="guide">PROJECT ASSIGNMENT</h2>
+          <p class="desc">
+            Design Challenge: How can physical exercise teachers in primary school get more insight into the sound levels 
+            and stress during the class?
+          </p>
+          <p class="desc">
+            What problem are we solving: PE/Gym teachers need to be aware of the effects of loud sounds, because they can affect 
+            their hearing and stress levels.
+          </p>
+          <p class="desc">
+            Desired situation: If the project is executed well, the result (desired situation) would be that PE/Gym teachers 
+            are able to be easily made aware of noise levels in gym halls.          
+          </p>
+          <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">SCOPE</h2>
         <p class="desc">
-          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          The end deliverables for the group project are as follows:
+          <ul class="target-list">
+            <li>UX Research Documents</li>
+            <li>Low-fidelity until high-fidelity design process.</li>
+            <li>Fully clickable prototype.</li>
+            <li>Proof of concepts</li>
+          </ul>
         </p>
         <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">RESEARCH QUESTIONS</h2>
+        <p class="desc">The main research question for this project is:
+          <ul class="target-list">
+            <li>How can we use a smartphone app to give insights to young exercise teachers on hearing damage caused by loud noises during PE lessons?</li>
+          </ul>
+        </p>
+        <p class="desc">There are also several sub-questions related to this main question:
+          <ul class="target-list">
+            <li>Where does most of the noise pollution come from?</li>
+            <li>In what way can we visualize data in order to make sure it is insightful for our target audience?</li>
+            <li>What type of data will help the user become completely aware of potential hearing damage?</li>
+            <li>Are there specific in-app features that can help teachers to organize PE classes with behavioural changes to decrease noise levels?</li>
+            <li>How can we test the UI/UX of the app?</li>
+            <li>How can we create a unified corporate identity to ensure a better user experience?</li>
+            <li>How can the app's UI/UX be optimised for both Apple and Android users?</li>
+          </ul>
+        </p>
+        <p class="desc">For each of these sub-questions, specific research methods are chosen from the CMD methods, which can be seen in the project document itself. </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="company-btn">
+        <a onclick="window.open('https://drive.google.com/file/d/1CdN-kd6BB136y52sjwFbTEz1wHnKhir-/view?usp=sharing')" class="explore-btn">Project Plan Document</a>
+      </div>
     </div>
   </main>
   
