--- a/groupdeliverable4.html
+++ b/groupdeliverable4.html
@@ -37,6 +37,14 @@
         <p class="desc">
           For the designing process for the Grip on Sound mobile app, I have had several instances where my design choices were taken into accountability. 
         </p>
+        <p class="desc">The related research questions for the design process are:
+          <ul class="target-list">
+            <li>In what way can we visualize data in order to make sure it is insightful for our target audience?</li>
+            <li>What type of data will help the user become completely aware of potential hearing damage?</li>
+            <li>Are there specific in-app features that can help teachers to organize PE classes with behavioural changes to decrease noise levels?</li>
+            <li>How can we test the UI/UX of the app?</li>          
+          </ul>
+        </p>
         <hr class="version">
     </div>
     <div class="reveal">
