--- a/groupdeliverable5.html
+++ b/groupdeliverable5.html
@@ -36,6 +36,7 @@
         <h2 class="guide">INTRO</h2>
         <p class="desc">
           For the final stages of the group project, proof of concepts was something me and the group longed for. While the final deliverable our stakeholder Dennis wished for was a prototype, I thought it was a good idea to work on these proof of concepts together with some group members.
+          There is no connected research question for this deliverable, since the proof of concepts would not be validated before the deadline because of time constraints.
         </p>
         <hr class="version">
     </div>
@@ -43,13 +44,13 @@
       <div class="width">
         <h2 class="guide">REQUIREMENTS</h2>
         <p class="desc">
-          When discussing with the group, a list of three proof of concepts came forward that we would work on.
+          After discussing with the group what type of proof of concepts we would want to build, a set of two proof of concepts came forward that we would work on.
           <ul class="target-list">
             <li>A live decibel meter with visualisation.</li>
             <li>The daily dose screen filling up based on the decibel meter values from the first item.</li>
           </ul>
         </p>
-        <p class="desc">These proof of concepts would be used on the day of Innovation Insights, and displayed on big screens during the presentations.</p>
+        <p class="desc">The idea was that these proof of concepts would be used on the day of Innovation Insights, and displayed on big screens during the presentations.</p>
         <hr class="version">
       </div>
     </div>
