--- a/groupdeliverable6.html
+++ b/groupdeliverable6.html
@@ -30,14 +30,49 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">GROUP PROJECT</h2>
       <h1 class="product-heading">THE SCRUM MASTER</h1>
-      <p class="product-text">DELIVERABLE CONTAINING MY ROLE AS SCRUM MASTER</p>
+      <p class="product-text">DELIVERABLE CONTAINING MY ROLE AS SCRUM MASTER IN THE GROUP PROJECT.</p>
     </section>
     <div class="width">
-        <h2 class="guide">PERSONAS</h2>
+        <h2 class="guide">INTRO</h2>
         <p class="desc">
-          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          During the course of the group project, I have had the role of SCRUM master during the first two weeks of the project. This meant that I had to keep track of the trello board, keep the motivation present in the group, and organize a retrospective at the end of the sprint.
         </p>
         <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">TASKS</h2>
+        <p class="desc">
+          <ul class="target-list">
+            <li>Dividing tasks between group members.</li>
+            <p class="desc">This task was mainly for setting up the project plan, and for analyzing the work of the previous semester media group. I divided the work, and let the group members choose what they prefer to do.</p>
+            <li>Organizing the SCRUM board.</li>
+            <p class="desc">Since I was the first SCRUM master of the group, I got to start adding tasks to the product backlog, assign tasks to group members, and try to finish the sprint tasks at the end of the two weeks. This is the final state of the SCRUM board at the end of the project:</p>
+            <div class="company">
+              <img src="./images/scrumbord.png" class="deliverable">
+            </div>
+            <li>Organizing a retrospective at the end of the sprint.</li>
+            <p class="desc">At the end of the sprint, I organized a retrospective for the group with the help of the four L's. Everybody added sticky notes, and together we made a planning for the next sprint. I was also glad to see that the next SCRUM masters used the same pattern I took as the initiator of being SCRUM master.</p>
+            <div class="company">
+              <img src="./images/Retrospective.png" class="deliverable">
+            </div>
+            <li>Initiate stand-ups everyday, and ask what the group is working on.</li>
+            <p class="desc">Stand-ups were held at 09:30 every morning, and here I asked what has been done the day before, and what the planning for the day is.</p>
+          </ul>
+        </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">REFLECTION AND EVALUATION</h2>
+        <p class="desc">Overall, I thoroughly enjoyed being the SCRUM master for the first sprint. I have gained knowledge on SCRUM during my previous internship, but I have not executed this in a group manner.</p>
+        <div class="column">
+          <p class="company">However, the same principals still applied, but now I had to keep everyone's work into consideration. Also communication was a much bigger factor, since you need to be up-to-date on everyones work.</p>
+          <p class="company">Even though the tasks of the sprint itself were not that appealing, since it was the startup for the project, I am glad that I had set a starting point for the group, and I have received positive feedback on me being the SCRUM master.</p>
+        </div>
+        <hr class="version">
+      </div>
     </div>
   </main>
   
