--- a/groupdeliverable7.html
+++ b/groupdeliverable7.html
@@ -33,7 +33,6 @@
       <p class="product-text">DELIVERABLE CONTAINING THE INITIAL PROJECT PLAN AND RESEARCH QUESTIONS.</p>
     </section>
     <div class="width">
-      <hr class="version">
       <h2 class="guide">INTRO</h2>
         <p class="desc">This deliverable page presents a summary of the project plan of the group project. At the bottom of the page you can find a button which leads to the full project plan document.</p>
       <hr class="version">
@@ -90,7 +89,7 @@
             <li>How can the app's UI/UX be optimised for both Apple and Android users?</li>
           </ul>
         </p>
-        <p class="desc">For each of these sub-questions, specific research methods are chosen from the CMD methods, which can be seen in the project document itself. </p>
+        <p class="desc">For each of these sub-questions, specific research methods are chosen from the CMD methods, which can be seen in the project plan document. </p>
         <hr class="version">
       </div>
     </div>
