--- a/groupdeliverable8.html
+++ b/groupdeliverable8.html
@@ -29,15 +29,39 @@
   <main class="product-main">
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">GROUP PROJECT</h2>
-      <h1 class="product-heading">EVALUATION AND RELFECTION</h1>
-      <p class="product-text">DELIVERABLE CONTAINING MY ROLE AS SCRUM MASTER</p>
+      <h1 class="product-heading">EVALUATION &  RELFECTION</h1>
+      <p class="product-text">DELIVERABLE CONTAINING MY REFLECTION AND EVALUATION ON THE GROUP PROJECT.</p>
     </section>
     <div class="width">
-        <h2 class="guide">PERSONAS</h2>
+        <h2 class="guide">JUDGEMENT AND COMMUNICATION</h2>
         <p class="desc">
-          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          During the course of this project I have communicated mainly with my group members. Every two weeks, an update meeting was held with our main stakholder Dennis. These meetings mainly consisted of us giving updates to Dennis about the state of our product. These meetings were always after the general stand-up from the project. 
         </p>
+        <p class="desc">During the stand-up of the Grip on Sound team, everyone gave their updates on what they are currently working on. For our project, we did not have a lot of addition to these stand-ups, since the mobile application was pretty separate from the smartwatch app, which is what most of the Grip on Sound team was working on.</p>
+        <p class="desc">During the group project, I mainly used the <a class="menu-link line" href="https://cmdmethods.nl/" target="_blank" rel="noopener noreferrer">CMD methods</a>, and <a class="menu-link line" href="https://www.nngroup.com/articles/which-ux-research-methods/" target="_blank" rel="noopener noreferrer">Nielsen Norman Group</a> for supportive research, since these are scientifically proven, and provide useful information. I documented all my work methodically, and made sure that all of my deliverables bounce back to the initial research questions.</p>
+        <p class="desc">For an overall evaluation on the group project, the project felt bland, and nothing that I have not done before. At the start of the project this was fine, but nearing the end of the project, the motivation exponentially decreased in the group.</p>
+        <p class="desc">On the other hand, I did try to keep going, and keep delivering quality until the end of the project. Something that was done twice during the semester was a peer feedback session. During these sessions I received feedback by my group members on my work in the group:</p>
+        <div class="company">
+          <img src="./images/peer1.png" class="deliverable">
+        </div>
+        <div class="company">
+          <img src="./images/peer2.png" class="deliverable">
+        </div>
         <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">LEARNING ABILITY</h2>
+        <p class="desc">I have learned several things during the group project. From which the main one of course is that physical education teachers often face hearing damage without even realizing. As for the following learning points, they are mainly teamwork related learning points:
+          <ul class="target-list">
+            <li>I have learned to work with SCRUM in a group fashion. Before, I have only done individual SCRUM, and keeping group members into consideration was something I had to get used to, but eventually learned a lot from.</li>
+            <li>I have learned how to professionally work on a Figma file. Before this was just me individually in a file, but by applying my knowledge about components and styles in team form, I was able to get the most out of the group.</li>
+            <li>I have learned how to use the integrated source control in Visual Studio Code to publish and merge branches with each other.</li>
+            <li>I have learned how to use the Web Audio API in JavaScript. Before I have never used this before, and creating a proof of concept with audio was entirely new to me. I am glad that I had found a tutorial, and that I have now gained knowledge about audio visualisation in JavaScript. Even though the stakeholder does not gain anything from this, I am learning more about JavaScript, which is something I have been doing every semester.</li>
+          </ul>
+        </p>
+      </div>
+      <hr class="version">
     </div>
   </main>
   
