--- a/group.html
+++ b/group.html
@@ -133,6 +133,7 @@
               Furthermore, I have learned that the task of being a SCRUM master requires a lot of initiative, which was not something I was used to, but glad to have experienced. I have also worked on some development for the proof of concepts of this project. This was also in a group manner which helped me learn more about version management in group projects. In short, these are my learning points:
               <ul class="target-list">
                 <li>Working with SCRUM in a group manner.</li>
+                <li>Working with a group in a Figma file in a professional manner.</li>
                 <li>Communication within the group and with stakeholders.</li>
                 <li>Version management with multiple group members.</li>
               </ul> 
@@ -277,6 +278,18 @@
                 </div>
                 <div class="learningoutcome">
                   <h3>LO-6</h3>
+                  <h3>LO-7</h3>
+                </div>
+              </div>
+            </div>
+
+            <div class="row" onclick="window.open('groupdeliverable11.html')" style="cursor: pointer;">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Advice Report</h2>
+                </div>
+                <div class="learningoutcome">
                   <h3>LO-7</h3>
                 </div>
               </div>
