--- a/groupdeliverable9.html
+++ b/groupdeliverable9.html
@@ -33,11 +33,46 @@
       <p class="product-text">DELIVERABLE CONTAINING MY ROLE AS SCRUM MASTER</p>
     </section>
     <div class="width">
-        <h2 class="guide">PERSONAS</h2>
+        <h2 class="guide">FIGMA</h2>
         <p class="desc">
-          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          Figma was used for the entire design process of the group project. I had my own wireframes page, where I worked out my pages and functionalities. The full Figma file can be seen through <a class="menu-link line" href="https://www.figma.com/file/oIqNVG2cKIFS9ToZsToQVz/Team-Snorkelkat-Design-File?type=design&node-id=2%3A9&mode=design&t=JcpKGl3Kl8D4QpTf-1" target="_blank" rel="noopener noreferrer">here</a>.
         </p>
+        <div class="company">
+          <img src="./images/figmagroup.png" class="deliverable">
+        </div>
         <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">GITLAB</h2>
+        <p class="desc">
+          Gitlab was used to keep track of version control of our proof of concepts. The repository can be seen through <a class="menu-link line" href="https://git.fhict.nl/I439985/griponsound.git" target="_blank" rel="noopener noreferrer">here</a>. Gitlab was only used during the final few weeks of the semester.
+        </p>
+        <div class="company">
+          <img src="./images/gitlab.png" class="deliverable">
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">TEAMS</h2>
+        <p class="desc">Teams was used to upload all related research documents within the group. Teams was used since the start of the project, since each sprint had a designated folder.</p>
+        <div class="company">
+          <img src="./images/teams.png" class="deliverable">
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">MIRO</h2>
+        <p class="desc">Miro was used during the entirity of the group project, and was mainly used for inspiration and sprint retrospectives. Also a Moscow analysis and peer feedback have been done in Miro. The full Miro board can be seen through <a class="menu-link line" href="https://miro.com/app/board/uXjVNcKDVh8=/" target="_blank" rel="noopener noreferrer">here</a>.</p>
+        <div class="company">
+          <img src="./images/miro.png" class="deliverable">
+        </div>
+        <hr class="version">
+      </div>
     </div>
   </main>
   
