--- a/groupdeliverable10.html
+++ b/groupdeliverable10.html
@@ -30,14 +30,70 @@
     <section id="welcome" class="product-intro">
       <h2 class="project-heading">GROUP PROJECT</h2>
       <h1 class="product-heading">UPDATE PRESENTATION</h1>
-      <p class="product-text">DELIVERABLE CONTAINING MY ROLE AS SCRUM MASTER</p>
+      <p class="product-text">DELIVERABLE CONTAINING THE UPDATE PRESENTATION THAT WAS GIVEN TO FELLOW STUDENTS AND LECTURERS.</p>
     </section>
     <div class="width">
-        <h2 class="guide">PERSONAS</h2>
+        <h2 class="guide">INTRO</h2>
         <p class="desc">
-          I used Figma for my entire designing process. This includes the wireframes, until the final prototype which has been tested with users. Using knowledge I gained on auto-layouts, styles and components during my internship, I was able to smoothly work through this process.
+          To receive feedback on our projects, lecturers had given the student groups the chance to give an update presentation to fellow students and lecturers on each Tuesday afternoon. Because my group project was not always present during these presentations, I wanted to give a presentation during one of these sessions, and give everybody a heads up on our project. By making use of the <a class="menu-link line" href="https://cmdmethods.nl/cards/showroom/pitch" target="_blank" rel="noopener noreferrer">pitch</a> method, I was able to give a succesfull presentation.
+        </p>
+        <p class="desc">The goal was not only to give everyone a heads-up, it was also to gather feedback. A question I had set up for myself for this presentation was:
+          <ul class="target-list">
+            <li>How can I create a presentation about my group project which gives the audience a clear view on what has been worked on, and give them an opportunity to give feedback?</li>
+          </ul>
         </p>
         <hr class="version">
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">CONTEXT</h2>
+        <p class="desc">
+          Since my semestercoach Bardt regularly attended presentations from other groups, his experience was that nobody really told what their project exactly was about.
+        </p>
+        <p class="desc">
+          Based on this, I wanted to prepare a presentation where everybody should be able to understand what the project is about, and what the problem was that is being solved.
+        </p>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">PRESENTATION</h2>
+        <p class="desc">
+          Below you can see the presentation that was given. Important aspects that I wanted to focus on were:
+          <ul class="target-list">
+            <li>Context about the project.</li>
+            <li>The problem we are solving.</li>
+            <li>What already has been worked on.</li>
+            <li>Working process.</li>
+            <li>What still has to be done.</li>
+          </ul>
+        </p>
+        <div class="wireframe">
+          <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoIqNVG2cKIFS9ToZsToQVz%2FTeam-Snorkelkat-Design-File%3Fpage-id%3D2%253A11%26type%3Ddesign%26node-id%3D918-16374%26viewport%3D1261%252C-2085%252C0.12%26t%3DQv2dELAwgAsDPcvc-1%26scaling%3Dscale-down%26starting-point-node-id%3D918%253A16374%26mode%3Ddesign" allowfullscreen></iframe>
+        </div>
+        <hr class="version">
+      </div>
+    </div>
+    <div class="reveal">
+      <div class="width">
+        <h2 class="guide">RESULTS AND CONCLUSION</h2>
+        <p class="desc">
+          Several feedback points were given based on the presentation that I and the group took with us. These were as follows:
+          <ul class="target-list">
+            <li>Visualize what a dB value is equal to (by using references to daily products that make noise)</li>
+            <li>When presenting at Innovations Insight we should immerse the audience by letting them listen to what a physical education teacher hears during the day.</li>
+            <li>When a user is risking potential hearing damage, notifications in the app should be more clear to raise even more awareness.</li>
+          </ul>
+        </p>
+        <p class="desc">
+          Based on these feedback points, iterations on the design were made such as a meter on the homepage. This meter compares the sound levels to daily life products:
+        </p>
+        <div class="company">
+          <img src="./images/dd.png" alt="" class="deliverable">
+        </div>
+        <hr class="version">
+      </div>
     </div>
   </main>
   
