--- a/homepage.html
+++ b/homepage.html
@@ -214,7 +214,6 @@
                                 <li><a class="menu-link line" href="groupdeliverable9.html" target="_blank" rel="noopener noreferrer">Group Project: Methods and Tooling</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable10.html" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Personal Website</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
                             </ul>
                         </td>
@@ -226,6 +225,7 @@
                                 <li><a class="menu-link line" href="individualdeliverable5.html" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable8.html" target="_blank" rel="noopener noreferrer">Group Project: (Personal) Evaluation and Reflection</a></li>
                                 <li><a class="menu-link line" href="groupdeliverable10.html" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
+                                <li><a class="menu-link line" href="groupdeliverable11.html" target="_blank" rel="noopener noreferrer">Group Project: Advice Report</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Dutch Design Week</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Malaga</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
