--- a/international.html
+++ b/international.html
@@ -111,11 +111,43 @@
         <div class="width">
             <h2 class="guide">RESULTS</h2>
             <p class="desc">
-              Below you can find the proof section of this project. You are able to filter on specific learning outcomes, and find more information about a specific deliverable by clicking on them. Most deliverables have a link at the bottom of the page, which
+              Below you can find the proof section of this project. Each deliverable has a title, and its related learning outcomes abbreviated as "LO". You can find more information about a specific deliverable by clicking on them. Most deliverables have a link at the bottom of the page, which
               reference towards its connected research document.
             </p>
             <hr>
         </div>
+    </div>
+
+    <div class="reveal">
+      <div class="width">
+        <section class="proof" id="proof">
+          <div class="proof-content">
+            <div class="row" onclick="window.open('internationaldeliverable1.html')" style="cursor: pointer;">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Dutch Design Week</h2>
+                </div>
+                <div class="learningoutcome"> 
+                  <h3>LO-7</h3>  
+                </div>
+              </div>
+            </div>
+            
+            <div class="row" onclick="window.open('internationaldeliverable2.html')" style="cursor: pointer;">
+              <img src="./images/bggif.gif" alt="">
+              <div class="main-row">
+                <div class="row-text">
+                  <h2>Malaga</h2>
+                </div>
+                <div class="learningoutcome">
+                  <h3>LO-7</h3>  
+                </div>          
+              </div>
+            </div>            
+          </div>
+        </section>
+      </div>
     </div>
   </main>
 
